crates/ink/tests/ui/trait_def/fail/config_namespace_invalid_3.rs
#[ink::trait_definition(namespace = "")]
pub trait TraitDefinition {
    #[ink(message)]
    fn message(&self);
}

fn main() {}
